--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <h2 class="special-text">General Training Format</h2>
           <strong>This cohort Training has been designed to take the following format:</strong>
           <p class="">
-            <span class=""><strong>Duration:</strong> 12 - 16 weeks long</span><br>
+            <span class=""><strong>Duration:</strong>  ~16 weeks long</span><br>
             <span class=""><strong>Delivery Method:</strong>
               <ul class="ul-disc">
                 <li><em><i class='bx bx-last-page'></i>Weekly: </em>Recorded content + Assignments.</li>
